fix collapse on dragging

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,4 +1,14 @@
+.label {
+    font-weight: bold;
+    font-size: 150%;
+}
+
 .hh-character {
+
+    .meaning-pinyin-container {
+        font-size: 150%;
+    }
+
     .meaning {
         font-style: italic;
     }
@@ -69,8 +79,7 @@
     }
     .gurney {
         border: medium solid #ccc;
-        width: 250px;
-        min-height: 130px;
+        width: 400px;
         background-color: #dadada;
     }
 
@@ -79,6 +88,16 @@
         content: ' ';
         clear: both;
         display: block;
+    }
+
+    .hh-character {
+        .meaning-pinyin-container {
+            width: 100px;
+        }
+
+        .hh-component {
+            height: 250px;
+        }
     }
 
 }
